After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733418 - Critical keyring warning when unlocking screen
Critical keyring warning when unlocking screen
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: pam
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-07-19 20:24 UTC by Cosimo Cecchi
Modified: 2014-08-11 18:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pam: Don't use geteuid() to get uid for authenticated user (3.90 KB, patch)
2014-07-28 08:54 UTC, Stef Walter
committed Details | Review

Description Cosimo Cecchi 2014-07-19 20:24:44 UTC
After upgrading to gnome-keyring 3.12, a critical warning is printed to the journal every time I unlock the screen - possibly also after logging in from GDM.

Jul 19 13:20:35 yoga gdm-password][27900]: The gnome keyring socket is not owned with the same credentials as the user login: /run/user/1000/keyring/control
Jul 19 13:20:35 yoga gdm-password][27900]: gkr-pam: couldn't unlock the login keyring.

Not sure if the warning is benign or not - I did not get any errors in the session itself.

This is reproducible 100% of the times on Fedora 20 + GNOME 3.12 COPR.
Comment 1 Stef Walter 2014-07-21 06:38:40 UTC
Ray, is the screen saver PAM stack now running with different credentials compared to GNOME 3.10?
Comment 2 Stef Walter 2014-07-28 08:54:06 UTC
Created attachment 281844 [details] [review]
pam: Don't use geteuid() to get uid for authenticated user

Instead we use the 'struct passwd' that we looked up earlier.

This causes issues when the PAM stack is not running as the user
but as root or someone else.
Comment 3 Stef Walter 2014-07-28 08:54:37 UTC
Attached possible untested patch for this bug.
Comment 4 Cosimo Cecchi 2014-07-28 09:14:12 UTC
Review of attachment 281844 [details] [review]:

Seems to be working like a charm, and code looks good to me. Thanks Stef!
Comment 5 Stef Walter 2014-08-11 18:56:37 UTC
Attachment 281844 [details] pushed as d5cffa1 - pam: Don't use geteuid() to get uid for authenticated user